fix: enable native access for JLine3 terminal
Add JVM options to allow JLine3 to load native libraries and access
the system terminal properly. This fixes the "Unable to create a
system terminal, creating a dumb terminal" warning.

Options added:
- --enable-native-access=ALL-UNNAMED
- --add-opens java.base/java.lang=ALL-UNNAMED

Now JLine3 can properly access the system terminal and enable raw mode.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>